# project

./: CMakeLists.txt  README.md
header/: bishop.hpp  board.hpp  game.hpp  king.hpp  knight.hpp  pawn.hpp  piece.hpp  pieceMoves.hpp  power.hpp  print.hpp  queen.hpp  revealBoard.hpp  rook.hpp
src/: bishop.cpp  board.cpp  game.cpp  king.cpp  knight.cpp  main.cpp  pawn.cpp  piece.cpp  pieceMoves.cpp  power.cpp  print.cpp  queen.cpp  revealBoard.cpp  rook.cpp  web_gui.cpp
web/: package.json  server.js
web/public/: game.html  home.html  login.html  main.html  room.html  signup.html  styles.css
